fixed all the layout issues, changed hover color, added another list item, updated the readme

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 
 h2 {
     text-align: center;
-    font-family: "proxima-nova", Arial, Verdana;
     font-size: 2rem;
     color: #091f2f;
     text-transform: uppercase;
@@ -13,12 +12,23 @@ h2 {
 
 ul {
     list-style-type: none;
+    padding: 0;
 }
 
 .quick-links li {
     display: block;
     margin-bottom: 25px;
     padding: 0 12.5px;
+}
+
+.quick-links li a.department-link:hover {
+    text-decoration: none;
+    background: #D60E96;
+    color: #fff;
+}
+
+.quick-links.departments .department a:hover .department-phone {
+    color: #fff;
 }
 
 .quick-links.departments li a {
@@ -53,9 +63,9 @@ ul {
     font-size: 48px;
     padding-bottom: 5px;
 }
+
 .fa, .fas {
     font-family: FontAwesome;
-   
 }
 
 .col-xs-4 {
@@ -73,22 +83,21 @@ ul {
     margin-top: 5px;
     font-size: 16px;
     color: #585858;
-    -webkit-transition: all 0.4s ease;
-    -moz-transition: all 0.4s ease;
-    -o-transition: all 0.4s ease;
-    transition: all 0.4s ease;
+    -webkit-transition: all 0.1s ease;
+    -moz-transition: all 0.1s ease;
+    -o-transition: all 0.1s ease;
+    transition: all 0.1s ease;
 }
 
 .quick-links.departments .department .department-info {
-    font-size: 16px;
     padding: 0 15px 0 30px;
-    font-size: 18px;
     position: relative;
-    
+    font-size: 1rem;
+    font-weight: 700;
 }
 
 div.row {
-    display: flex;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
